<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_faculty"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_copy"
        android:title="@string/action_faculty"/>
    <item
        android:id="@+id/action_credits"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/action_credits"/>
    
   	<item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView" />
</menu>
