<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="#e9e9e9"
              android:id="@+id/home_linearlayout"
               >
		
		<TextView
		    android:id="@+id/textView5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/shadow_curved_corners"
		    android:padding="10dp"
		    android:layout_margin="10dp"
		    android:layout_marginTop="15dp"
		    android:text="@string/about_app"
		    android:textColor="#567" />
		
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:background="@drawable/shadow_square"
			android:layout_margin="10dp">
			<TextView
			    android:id="@+id/loginStatus"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor = "@color/orange"
			    android:layout_gravity="center_horizontal"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
	
			<EditText
			    android:id="@+id/username"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:inputType="text"
			    android:hint="@string/id_hint" >
	
			    <requestFocus />
			</EditText>

			<EditText
			    android:id="@+id/password"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:hint="@string/pass_hint"
			    android:inputType="textPassword" />
	
			<Button
			    android:id="@+id/login"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/login_btn"
			    android:layout_gravity="center_horizontal" />
		</LinearLayout>
		<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:contentDescription="@string/app_name"
			    android:layout_gravity="center_horizontal"
			    android:src="@drawable/capture" />
</LinearLayout>